objects/LAT_DebugInfo__c.object
<CustomObject>
    <fields>
        <fullName>LAT_DebugData__c</fullName>
        <label>Debug Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LAT_Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ResultCode__c</fullName>
        <label>Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Debug Info</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Debug Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debugs Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>